--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
             <div class="box">
                 <h3>Quick Links</h3>
-                <a href="#">Hme</a>
+                <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Product</a>
                 <a href="#">Review</a>
