--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio a suscipit consequuntur? Aspernatur assumenda quam tenetur sit eum aut natus accusamus eaque hic aliquid dolorem soluta libero molestias eligendi blanditiis obcaecati, et quisquam laudantium! Vero nisi accusamus magni qui repudiandae ut id mollitia harum sint.</p>
                 <div class="user">
-                    <img src="new-cloths-images/white-cat-min.jpg" alt="" class="customer-img">
+                    <img src="new-cloths-images/istockphoto-1322123064-612x612 (1).jpg" alt="" class="customer-img">
                     <div class="user-info">
                         <h3>Jhony deo</h3>
                         <span> Happy Custoner </span>
@@ -249,7 +249,7 @@
                 </div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio a suscipit consequuntur? Aspernatur assumenda quam tenetur sit eum aut natus accusamus eaque hic aliquid dolorem soluta libero molestias eligendi blanditiis obcaecati, et quisquam laudantium! Vero nisi accusamus magni qui repudiandae ut id mollitia harum sint.</p>
                 <div class="user">
-                    <img src="new-cloths-images/man-looking-into-the-distance-on-top-of-the-mountain-free-photo.webp" alt="" class="customer-img">
+                    <img src="new-cloths-images/istockphoto-1364917563-612x612.jpg" alt="" class="customer-img">
                     <div class="user-info">
                         <h3>Jhony deo</h3>
                         <span> Happy Custoner </span>
@@ -276,7 +276,7 @@
             </form>
 
             <div class="image">
-                <img src="new-cloths-images/111282678-interior-background-of-modern-men-clothing-store-vector-illustration.jpg" alt="" class="contact-img" >
+                <img src="new-cloths-images/cute-girl-pic-32.jpg" alt="" class="contact-img" >
             </div>
 
         </div>
