--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 <a href="#">01654xyxyxy</a>
                 <a href="#">something@g-mail.com</a>
                 <a href="#">Dhaka, Bangladesh - 1214</a>
-                <img src="new-cloths-images/360_F_455102361_RsJAeKOVlrrbvLLRtrFQ3K6VAuDg0b4b.jpg" alt="" class="payment-img">
+                <img src="new-cloths-images/online-payment-methods-systems-icons-260nw-2275324667.webp" alt="" class="payment-img">
             </div>
 
         </div>
